????/??/?? Port MOSREF into WaspVM Core
  - Copied MOSREF 2.0-b3 into the Core.

2008/08/13 Port lib/socks-client, lib/socks-server Back to WaspVM
  - Added (random-integer minimum maximum) -> integer primitive.
  - Added (resolve-ipv4 hostname) -> integer primitive.
  - Modified tcp-connect to accept integer addresses.
  - Rename cancel-task to cancel-timeout.
  - Added (close-service os-service) primitive.
  - Ported lib/socks-client and lib/socks-server from MOSREF 2.0 to WaspVM.
  - Added a unit test for lib/socks-client and lib/socks-server.
  - Fixed overuse of OS loop due to cancel-task not decreasing the OS usage
    index.
  - Added (scan-io) primitive when compiled with WASP_DEBUG_IO
  - Fixed missing return value from wasp_read_entropy_str.

2008/08/13 Port lib/bridge Back to WaspVM
  - Ported lib/bridge from MOSREF 2.0 to WaspVM.
  - Fixed a bug in the queue-input GC trace that was not passing trace on to
    the generic input GC trace method.
  - Added a unit test for lib/bridge.

2008/08/13 Restore Platform, Architecture and OS Semantics
  - Added arch to makefile.cf.
  - Moved old platform logic to os in Makefile.cf
  - Made platform a combination of os and arch, like MOSVM.
  - Made waspvm stub name a combination of waspvm, os and arch, like MOSVM.
  - Updated make exe-package to account for platform changes.
  - Restored stubs directory.
  - read-file now returns "" when reading past end of the file, instead of #f.
  - Restored use of stub-path to lib/build
  - Modified build process for local waspc and wasp to overlay site/config.ms
    and site/config.mo with mod/local-config.m*
  - Added support for -platform <platform> to waspc, can be used instead of 
    -stub
  - Restored stubs directory to bin/install installer.

2008/08/12 Port SALSA20 to WaspVM
  - Disabled plugins until after 1.0 due to Win32 issues.
  - Added (make-salsa20-key seed) -> salsa20-key.
  - Added (salsa20-encrypt key plaintext ?iv) -> ciphertext