@@ -1,4 +1,5 @@
 ; Copyright (C) 2006, Ephemeral Security, LLC
+; Modifications (C) 2008, Scott W. Dunlop <swdunlop@gmail.com>
 ; 
 ; This library is free software; you can redistribute it and/or modify it 
 ; under the terms of the GNU Lesser General Public License, version 2.1
@@ -14,53 +15,49 @@
 ; Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
 
 (module "mosref/base")
-(import "lib/cfb")
-(import "lib/block-filter")
+
 (import "lib/checksum-filter")
 (import "lib/copy-filter")
-;(import "lib/trace")
+(import "lib/trace")
 
-(export *sprng* *ecdh-keysize* *sig-length* make-iv)
+(export *ecdh-keysize* *sig-length* 
+        make-iv make-private-key
+        find-public-key find-shared-secret)
 
-(define *sprng* (make-random "sprng"))
-(define *ecdh-keysize* 384)
+(define *ecdh-keysize* 32)
 (define *sig-length* 16)
 
-(define (make-iv)
-  (random-string 16 *sprng*))
+;;; We trust the PRNG for our IV's..
+(define (make-iv) (read-prng 8))
+
+;;; But the node key? Let's aim higher..  Oh Mr. OS...
+(define (make-private-key) (read-entropy 32))
+
+(define find-public-key private-key curve25519-public)
+(define find-shared-secret curve25519-secret)
+
+(export make-mosref-recv make-mosref-xmit)
 
 (define (make-mosref-xmit xmit xmit-key xmit-iv)
-  (define xmit-block-size (key-block-size xmit-key))
-  (define xmit-cfb (make-cfb xmit-key xmit-iv aes-encrypt))
-  (define (xmit-encrypt block)
-    (cfb-encrypt xmit-cfb block))
+  (define xmit-key (make-salsa20-key xmit-key xmit-iv))
+  (define (xmit-encrypt message) (salsa20-encrypt xmit-key message))
 
   (output-chain xmit
-                ;(trace-filter "xmit-ciphertext-block")
+                (trace-filter "xmit-ciphertext")
                 (encrypt-filter xmit-encrypt)
-                ;(trace-filter "xmit-plaintext-block")
-                (block-split-filter xmit-block-size)
-                ;(trace-filter "xmit-plaintext w/cs")
+                (trace-filter "xmit-plaintext w/cs")
                 (prepend-checksum-filter crc32)
-                ;(trace-filter "xmit-plaintext")
+                (trace-filter "xmit-plaintext")
                 (copy-filter)))
 
 (define (make-mosref-recv recv recv-key recv-iv)
-  (define recv-block-size (key-block-size recv-key))
-  (define recv-cfb (make-cfb recv-key recv-iv aes-encrypt))
-  (define (recv-decrypt block) (cfb-decrypt recv-cfb block))
+  (define recv-key (make-salsa20-key recv-key recv-iv))
+  (define (recv-decrypt message) (salsa20-decrypt recv-key message))
 
   (input-chain recv
-               ;(trace-filter "recv-ciphertext-data")
-               (fragment-filter recv-block-size)
-               ;(trace-filter "recv-ciphertext-block")
+               (trace-filter "recv-ciphertext")
                (decrypt-filter recv-decrypt)
-               ;(trace-filter "recv-plaintext-block")
-               (block-merge-filter recv-block-size)
-               ;(trace-filter "recv-plaintext w/cs")
+               (trace-filter "recv-plaintext w/cs")
                (check-checksum-filter crc32)
-               ;(trace-filter "recv-plaintext")
-               ))
-
-(export make-mosref-recv make-mosref-xmit)
+               (trace-filter "recv-plaintext")))
 
