@@ -1,4 +1,5 @@
 ; Copyright (C) 2006, Ephemeral Security, LLC
+; Modifications (C) 2008, Scott W. Dunlop <swdunlop@gmail.com>
 ; 
 ; This library is free software; you can redistribute it and/or modify it 
 ; under the terms of the GNU Lesser General Public License, version 2.1
